# ungoogled-chromium-windows

./: .gitmodules  README.md  build.py  domain_substitution.list  downloads.ini  flags.windows.gn  onlypatch.py  package.py  pruning.list
.github/: dependabot.yml
.github/actions/prepare/: action.yml
.github/actions/stage/: action.yml  index.js  package.json
.github/actions/winget/: action.yml  index.js  package.json
.github/scripts/: gen.py
.github/workflows/: build-arm.yml  build-x64.yml  build-x86.yml  deploychrome  main.yml  publish-release.yml  reusable-build.yml  winget.yml
devutils/: check_patch_files.sh  print_tag_version.sh  set_quilt_vars.sh  update_patches.sh
patches/: series
patches/debian_buster/arm/: crashpad.patch  gcc_skcms_ice.patch
patches/debian_buster/disable/: installer.patch  swiftshader.patch
patches/debian_buster/fixes/: alignof.patch  as-needed.patch  gpu-timeout.patch  include.patch  mojo.patch  namespace.patch
patches/debian_buster/warnings/: enum-compare.patch  explicit-constructor.patch  int-in-bool-context.patch  null-destination.patch  printf.patch
patches/inox-patchset/: chromium-skia-harmony.patch  fix-cfi-failures-with-unbundled-libxml.patch
patches/temp-patches/: remove-referrer-customization.patch  series
patches/ungoogled-chromium/windows/: windows-compile-mini-installer.patch  windows-disable-clang-version-check.patch  windows-disable-download-warning-prompt.patch  windows-disable-encryption.patch  windows-disable-event-log.patch  windows-disable-machine-id.patch  windows-disable-nodebug_assertion.patch  (+33 more)
